fix: paddings, gaps,  click on edit, pixelPerfect,small refactoring

--- a/src/components/DropdownNavigation/DropdownNavigation.css
+++ b/src/components/DropdownNavigation/DropdownNavigation.css
@@ -16,6 +16,11 @@
   cursor: pointer;
 }
 
+.dropdown-navigation__title-icon-white_size_34 {
+  width: 34px;
+  height: 34px;
+}
+
 .dropdown-navigation__title-icon-white_size_m {
   width: 26px;
   height: 26px;
@@ -57,15 +62,16 @@
 
 .dropdown-navigation__menu-list {
   position: absolute;
-  top: 20px;
+  top: 18px;
   left: 0;
-  padding: 42px 1px 28px 1px;
+  padding: 34px 1px 28px 1px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 10px;
+  gap: 6px;
   margin: 0;
-  width: 34px;
+  width: 36px;
+  box-sizing: border-box;
   list-style: none;
   background-color: #fff;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
@@ -74,17 +80,44 @@
   animation: downAni 0.3s forwards;
 }
 
-.dropdown-navigation__menu-list_size_m {
-  width: 26px;
-  gap: 5px;
-  border-radius: 0 0 13px 13px;
-  top: 15px;
-  padding: 16px 0px 0px;
+.dropdown-navigation__menu-list_size_34 {
+  width: 34px;
+  padding-top: 37px;
+  gap: 20px;
 }
 
-.dropdown-navigation__menu-list_padding_s {
-  border-radius: 0 0 17px 17px;
+.dropdown-navigation__menu-list_size_m {
+  width: 26px;
+  gap: 10px;
+  border-radius: 0 0 13px 13px;
+  top: 15px;
+  padding: 16px 0px 0px 0px;
+  top: 14px;
+}
+
+.dropdown-navigation__menu-list_gap_5 {
+  gap: 5px;
+}
+
+.dropdown-navigation__menu-list_paddingBottom_5 {
+  border-radius: 0 0 18px 18px;
+  padding-bottom: 5px;
+}
+
+.dropdown-navigation__menu-list_paddingBottom_2 {
+  border-radius: 0 0 13px 13px;
+  padding-bottom: 2px;
+}
+
+.dropdown-navigation__menu-list_paddingBottom_1 {
+  border-radius: 0 0 13px 13px;
   padding-bottom: 1px;
+}
+
+.dropdown-navigation__menu-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .dropdown-navigation__menu-list-item {
@@ -98,14 +131,14 @@
 .dropdown-navigation__sidebar {
   position: absolute;
   right: 36px;
-  top: 51px;
+  top: 49px;
   background-color: #161616;
   color: #fff;
   list-style: none;
   display: flex;
   flex-direction: column;
   text-align: right;
-  gap: 14px;
+  gap: 9px;
   max-width: 405px;
   padding: 10px 0px 9px 10px;
   border-radius: 17px 0px 0px 17px;
